# AI_Class_PathFinder

./: A*_results.csv  BestFirstSearch_results.csv  BreadthFirstSearch_results.csv  CMakeLists.txt  DepthFirstSearch_results.csv  README.md
Cpp/: .clang-format
Cpp/src/algorithms/helpers/: Node.cpp  Node.h
Cpp/src/problems/: puzzle8.cpp  puzzle8.h
src/: efolioA_main.py  efolioB_main.py  instances.py  instancesEfolioA.py  instancesEfolioB.py  main.cpp  main.py  prints.py
src/algorithms/: bestFirstSearch.cpp  bestFirstSearch.h
src/algorithms/helpers/: Problem.h
src/problems/: ParkTour.py  Puzzle8.py  Resgate.py
src/searchAlgorithms/: informedSearch.py  uninformedSearch.py
src/searchAlgorithms/helpers/: HeuristicProblem.py  Node.py  Problem.py
